:bug: Fix bug that progress bar container overlaps itself when rehashing many times

--- a/script.css
+++ b/script.css
@@ -65,7 +65,7 @@
 .videocommander-progress-time {
   position: absolute;
   left: 3%;
-  bottom: 7px;
+  bottom: 9px;
   font-size: 15px;
   color: rgba(255, 255, 255, 1.0);
 }
